Updated to use webpack

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,6 @@
 			ga('send', 'pageview');
 		</script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.js"></script>
-		<script src="res/hover.js"></script>
-		<script src="res/3d.js"></script>
+		<script src="watermelon/watermelon.js"></script>
 	</body>
 </html>
