--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="user-scalable=0, initial-scale=1.0" />
 
 		<title>Laura González</title>
-		<link rel="shortcut icon" href="res/mushroom.png" />
-		<link rel="stylesheet" href="res/css.css" />
+		<link rel="shortcut icon" href="res/image/mushroom.png" />
+		<link rel="stylesheet" href="watermelon/watermelon.css" />
 	</head>
 	<body>
 		<!-- I'm so sorry if your browser is breaking css because of this. It was SO worth it. -->
@@ -49,7 +49,7 @@
 			ga('require', 'displayfeatures');
 			ga('send', 'pageview');
 		</script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
 		<script src="watermelon/watermelon.js"></script>
 	</body>
 </html>
