--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 					<a data-type="linkedin" title="Look it's me looking serious" class="🌎" href="http://linkedin.com/in/lawwrr" onclick="ga('send', 'event', 'outbound', 'click', 'Linkedin')">
 						LinkedIn
 					</a>
-					<a data-type="twitter" title="Plase don't judge me" class="🌎" href="https://twitter.com/lawwrr" onclick="ga('send', 'event', 'outbound', 'click', 'Twitter')">
+					<a data-type="twitter" title="Plase don't judge me" class="🌎" href="https://twitter.com/freezydorito" onclick="ga('send', 'event', 'outbound', 'click', 'Twitter')">
 						Twitter
 					</a>
 					<a data-type="itch" title="No no no noo" class="🌎" target="_blank" href="https://walaura.itch.io" onclick="ga('send', 'event', 'outbound', 'click', 'Itch')">
