--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 					<a data-type="itch" title="No no no noo" class="🌎" target="_blank" href="https://walaura.itch.io" onclick="ga('send', 'event', 'outbound', 'click', 'Itch')">
 						Itch
 					</a>
-					<a data-type="github" title="Nothing of use here" class="🌎" target="_blank" href="https://github.com/lawwrr" onclick="ga('send', 'event', 'outbound', 'click', 'GitHub')">
+					<a data-type="github" title="Nothing of use here" class="🌎" target="_blank" href="https://github.com/walaura" onclick="ga('send', 'event', 'outbound', 'click', 'GitHub')">
 						GitHub
 					</a>
 					<a data-type="flickr" title="Some are good seriously" class="🌎" href="https://flickr.com/lawwrr" onclick="ga('send', 'event', 'outbound', 'click', 'Flickr')">
