--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 					You've reached my tiny internet corner! Hi,&nbsp;I'm&nbsp;<h1>Laura&nbsp;González</h1>. I build digital goods&nbsp;sometimes.
 				</div>
 				<div class="🎒-🌎">
-					<a data-type="linkedin" title="Look it's me looking serious" class="🌎" href="http://linkedin.com/in/lawwrr" onclick="ga('send', 'event', 'outbound', 'click', 'Linkedin')">
+					<a data-type="linkedin" title="Look it's me looking serious" class="🌎" href="http://linkedin.com/in/walaura" onclick="ga('send', 'event', 'outbound', 'click', 'Linkedin')">
 						LinkedIn
 					</a>
 					<a data-type="twitter" title="Plase don't judge me" class="🌎" href="https://twitter.com/freezydorito" onclick="ga('send', 'event', 'outbound', 'click', 'Twitter')">
