make email, linkedin smaller

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,6 @@
 					You've reached my tiny internet corner! Hi,&nbsp;I'm&nbsp;<h1>Laura&nbsp;González</h1>. I build digital goods&nbsp;sometimes.
 				</div>
 				<div class="🎒-🌎">
-					<a data-type="linkedin" title="Look it's me looking serious" class="🌎" href="http://linkedin.com/in/lawwrr" onclick="ga('send', 'event', 'outbound', 'click', 'Linkedin')">
-						LinkedIn
-					</a>
 					<a data-type="twitter" title="Plase don't judge me" class="🌎" href="https://twitter.com/lawwrr" onclick="ga('send', 'event', 'outbound', 'click', 'Twitter')">
 						Twitter
 					</a>
@@ -31,9 +28,9 @@
 					<a data-type="flickr" title="Some are good seriously" class="🌎" href="https://flickr.com/lawwrr" onclick="ga('send', 'event', 'outbound', 'click', 'Flickr')">
 						Flickr
 					</a>
-					<a data-type="mail" title="Party like it's 1990" class="🌎" target="_blank" class="mail" href="mailto:lawr@lauragonzalez.cc" onclick="ga('send', 'event', 'outbound', 'click', 'Email')">
-						Email
-					</a>
+				</div>
+				<div class="🎒-👄">
+					Wanna get in touch? Hit me up at <a class="🌎" data-type="linkedin" title="Look it's me looking serious" href="http://linkedin.com/in/lawwrr" onclick="ga('send', 'event', 'outbound', 'click', 'Linkedin')"> LinkedIn </a> or send me an <a class="🌎" data-type="mail" title="Party like it's 1990" target="_blank" class="mail" href="mailto:lawr@lauragonzalez.cc" onclick="ga('send', 'event', 'outbound', 'click', 'Email')">email</a>.
 				</div>
 			</div>
 		</div>
