--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 		<div class="🙅🌈">
 			<div class="🎒">
 				<div class="🎒-🌸">
-					You've reached my tiny internet corner! Hi,&nbsp;I'm&nbsp;<h1>Laura&nbsp;González</h1>. I build digital goods&nbsp;sometimes.
+					You've reached my tiny internet corner! Hi,&nbsp;I'm&nbsp;<h1>Laura&nbsp;González</h1>. I enjoy making things&nbsp;online.
 				</div>
 				<div class="🎒-🌎">
 					<a data-type="flickr" title="Some are good seriously" class="🌎" href="https://flickr.com/lawwrr" onclick="ga('send', 'event', 'outbound', 'click', 'Flickr')">
