--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 					</a>
 				</div>
 				<div class="🎒-👄">
-					Wanna get in touch? Hit me up at <a class="🌎" data-type="linkedin" title="Look it's me looking serious" href="http://linkedin.com/in/lawwrr" onclick="ga('send', 'event', 'outbound', 'click', 'Linkedin')"> LinkedIn </a> or send me an <a class="🌎" data-type="mail" title="Party like it's 1990" target="_blank" class="mail" href="mailto:lawr@lauragonzalez.cc" onclick="ga('send', 'event', 'outbound', 'click', 'Email')">email</a>.
+					Wanna get in touch? Hit me up at <a class="🌎" data-type="linkedin" title="Look it's me looking serious" href="http://linkedin.com/in/walaura" onclick="ga('send', 'event', 'outbound', 'click', 'Linkedin')"> LinkedIn </a> or send me an <a class="🌎" data-type="mail" title="Party like it's 1990" target="_blank" class="mail" href="mailto:lawr@lauragonzalez.cc" onclick="ga('send', 'event', 'outbound', 'click', 'Email')">email</a>.
 				</div>
 			</div>
 		</div>
