--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="user-scalable=0, initial-scale=1.0" />
 
-		<title>Laura González</title>
+		<title>Lau González</title>
 		<link rel="shortcut icon" href="res/image/mushroom.png" />
 		<link rel="stylesheet" href="watermelon/watermelon.css" />
 	</head>
@@ -13,7 +13,7 @@
 		<div class="🙅🌈">
 			<div class="🎒">
 				<div class="🎒-🌸">
-					You've reached my tiny internet corner! Hi,&nbsp;I'm&nbsp;<h1>Laura&nbsp;González</h1>. I enjoy making things&nbsp;online.
+					You've reached my tiny internet corner! Hi,&nbsp;I'm&nbsp;<h1>Lau&nbsp;González</h1>. I enjoy making things&nbsp;online.
 				</div>
 				<div class="🎒-🌎">
 					<a data-type="flickr" title="Some are good seriously" class="🌎" href="https://flickr.com/lawwrr" onclick="ga('send', 'event', 'outbound', 'click', 'Flickr')">
