add falling paintbrushes

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 					<a data-type="flickr" title="Some are good seriously" class="🌎" href="https://flickr.com/lawwrr" onclick="ga('send', 'event', 'outbound', 'click', 'Flickr')">
 						Flickr
 					</a>
-					<a data-type="flickr" title="It's photos too mostly" class="🌎" href="https://behance.net/walaura" onclick="ga('send', 'event', 'outbound', 'click', 'Behance')">
+					<a data-type="behance" title="It's photos too mostly" class="🌎" href="https://behance.net/walaura" onclick="ga('send', 'event', 'outbound', 'click', 'Behance')">
 						Behance
 					</a>
 					<a data-type="github" title="Nothing of use here" class="🌎" target="_blank" href="https://github.com/walaura" onclick="ga('send', 'event', 'outbound', 'click', 'GitHub')">
