--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 		<div class="🙅🌈">
 			<div class="🎒">
 				<div class="🎒-🌸">
-					Hi, welcome to my vast online empire! I'm&nbsp;<h1>Lau&nbsp;González</h1>. I like taking photos and toying with art and bossing computers around and whatnot.
+					Hi, welcome to my vast online empire! I'm&nbsp;<h1>Lau&nbsp;González</h1>. Sometimes I take photos, build cute web thingalings, toy with artsy projects.
 				</div>
 				<div class="🎒-🌎">
 					<a data-type="flickr" title="Some are good seriously" class="🌎" href="https://flickr.com/lawwrr" onclick="ga('send', 'event', 'outbound', 'click', 'Flickr')">
