--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,66 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8"/>
-		<meta name="viewport" content="user-scalable=0, initial-scale=1.0" />
 
-		<title>Lau González</title>
-		<link rel="shortcut icon" href="res/image/mushroom.png" />
-		<link rel="stylesheet" href="watermelon/watermelon.css" />
-	</head>
-	<body>
-		<!-- I'm so sorry if your browser is breaking css because of this. It was SO worth it. -->
-		<div class="🙅🌈">
-			<div class="🎒">
-				<div class="🎒-🌸">
-					Hi, welcome to my vast online empire! I'm&nbsp;<h1>Lau&nbsp;González</h1>. Sometimes I take photos, build cute web thingalings, toy with artsy projects.
-				</div>
-				<div class="🎒-🌎">
-					<a data-type="flickr" title="Some are good seriously" class="🌎" href="https://flickr.com/lawwrr" onclick="ga('send', 'event', 'outbound', 'click', 'Flickr')">
-						Flickr
-					</a>
-					<a data-type="behance" title="It's photos too mostly" class="🌎" href="https://behance.net/walaura" onclick="ga('send', 'event', 'outbound', 'click', 'Behance')">
-						Behance
-					</a>
-					<a data-type="github" title="Nothing of use here" class="🌎" target="_blank" href="https://github.com/walaura" onclick="ga('send', 'event', 'outbound', 'click', 'GitHub')">
-						GitHub
-					</a>
-					<a data-type="itch" title="No no no noo" class="🌎" target="_blank" href="https://walaura.itch.io" onclick="ga('send', 'event', 'outbound', 'click', 'Itch')">
-						Itch
-					</a>
-					<a data-type="twitter" title="Plase don't judge me" class="🌎" href="https://twitter.com/freezydorito" onclick="ga('send', 'event', 'outbound', 'click', 'Twitter')">
-						Twitter
-					</a>
-				</div>
-				<div class="🎒-👄">
-					Wanna get in touch? Hit me up at <a class="🌎" data-type="linkedin" title="Look it's me looking serious" href="http://linkedin.com/in/walaura" onclick="ga('send', 'event', 'outbound', 'click', 'Linkedin')"> LinkedIn </a> or send me an <a class="🌎" data-type="mail" title="Party like it's 1990" target="_blank" class="mail" href="mailto:lawr@lauragonzalez.cc" onclick="ga('send', 'event', 'outbound', 'click', 'Email')">email</a>.
-				</div>
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="user-scalable=0, initial-scale=1.0" />
+
+	<title>Laura González</title>
+	<link rel="shortcut icon" href="res/image/mushroom.png" />
+	<link rel="stylesheet" href="watermelon/watermelon.css" />
+</head>
+
+<body>
+	<!-- I'm so sorry if your browser is breaking css because of this. It was SO worth it. -->
+	<div class="🙅🌈">
+		<div class="🎒">
+			<div class="🎒-🌸">
+				Hi, welcome to my vast online empire! I'm&nbsp;
+				<h1>Laura&nbsp;González</h1>. Sometimes I take photos, build cute web thingalings, toy with artsy projects.
+			</div>
+			<div class="🎒-🌎">
+				<a data-type="flickr" title="Some are good seriously" class="🌎" href="https://flickr.com/lawwrr" onclick="ga('send', 'event', 'outbound', 'click', 'Flickr')">
+					Flickr
+				</a>
+				<a data-type="behance" title="It's photos too mostly" class="🌎" href="https://behance.net/walaura" onclick="ga('send', 'event', 'outbound', 'click', 'Behance')">
+					Behance
+				</a>
+				<a data-type="github" title="Nothing of use here" class="🌎" target="_blank" href="https://github.com/walaura" onclick="ga('send', 'event', 'outbound', 'click', 'GitHub')">
+					GitHub
+				</a>
+				<a data-type="itch" title="No no no noo" class="🌎" target="_blank" href="https://walaura.itch.io" onclick="ga('send', 'event', 'outbound', 'click', 'Itch')">
+					Itch
+				</a>
+				<a data-type="twitter" title="Plase don't judge me" class="🌎" href="https://twitter.com/freezydorito" onclick="ga('send', 'event', 'outbound', 'click', 'Twitter')">
+					Twitter
+				</a>
+			</div>
+			<div class="🎒-👄">
+				Wanna get in touch? Hit me up at
+				<a class="🌎" data-type="linkedin" title="Look it's me looking serious" href="http://linkedin.com/in/walaura" onclick="ga('send', 'event', 'outbound', 'click', 'Linkedin')">
+				LinkedIn </a> or send me an
+				<a class="🌎" data-type="mail" title="Party like it's 1990" target="_blank" class="mail" href="mailto:lawr@lauragonzalez.cc"
+				 onclick="ga('send', 'event', 'outbound', 'click', 'Email')">email</a>.
 			</div>
 		</div>
-		<div class="🌈 🌈--hover"></div>
-		<div class="🌈 🌈--body"></div>
-		<script>
-			!function(w,e,l,p){w.GoogleAnalyticsObject=l;w[l]||(w[l]=function(){
-			(w[l].q=w[l].q||[]).push(arguments)});w[l].l=+new Date;p=e.createElement('script');
-			var e=e.scripts[0];p.src='//www.google-analytics.com/analytics.js';
-			e.parentNode.insertBefore(p,e)}(window,document,'ga');
+	</div>
+	<div class="🌈 🌈--hover"></div>
+	<div class="🌈 🌈--body"></div>
+	<script>
+		!function (w, e, l, p) {
+			w.GoogleAnalyticsObject = l; w[l] || (w[l] = function () {
+				(w[l].q = w[l].q || []).push(arguments)
+			}); w[l].l = +new Date; p = e.createElement('script');
+			var e = e.scripts[0]; p.src = '//www.google-analytics.com/analytics.js';
+			e.parentNode.insertBefore(p, e)
+		}(window, document, 'ga');
 
-			ga('create', 'UA-60802592-1', 'auto');
-			ga('require', 'displayfeatures');
-			ga('send', 'pageview');
-		</script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
-		<script src="watermelon/watermelon.js"></script>
-	</body>
+		ga('create', 'UA-60802592-1', 'auto');
+		ga('require', 'displayfeatures');
+		ga('send', 'pageview');
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
+	<script src="watermelon/watermelon.js"></script>
+</body>
+
 </html>
