--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
 
 	<title>Laura González</title>
 	<link rel="shortcut icon" href="res/image/mushroom.png" />
-	<link rel="stylesheet" href="watermelon/watermelon.css" />
+	<link rel="stylesheet" href="watermelon.css" />
 </head>
 
 <body>
@@ -38,7 +38,7 @@
 			<div class="🎒-👄">
 				Wanna get in touch? Hit me up at
 				<a class="🌎" data-type="linkedin" title="Look it's me looking serious" href="http://linkedin.com/in/walaura" onclick="ga('send', 'event', 'outbound', 'click', 'Linkedin')">
-				LinkedIn </a> or send me an
+					LinkedIn </a> or send me an
 				<a class="🌎" data-type="mail" title="Party like it's 1990" target="_blank" class="mail" href="mailto:lawr@lauragonzalez.cc"
 				 onclick="ga('send', 'event', 'outbound', 'click', 'Email')">email</a>.
 			</div>
@@ -60,7 +60,7 @@
 		ga('send', 'pageview');
 	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
-	<script src="watermelon/watermelon.js"></script>
+	<script src="watermelon.js"></script>
 </body>
 
 </html>
