--- a/static/portfolio/index.html
+++ b/static/portfolio/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="user-scalable=0, initial-scale=1.0" />
 
 	<title>Laura González</title>
-	<link rel="shortcut icon" href="res/image/mushroom.png" />
-	<link rel="stylesheet" href="watermelon.css" />
+	<link rel="shortcut icon" href="../res/image/mushroom.png" />
+	<link rel="stylesheet" href="../watermelon.css" />
 </head>
 
 <body>
@@ -25,7 +25,8 @@
 				<a data-type="behance" title="It's photos too mostly" class="🌎" href="https://www.behance.net/walaura" onclick="ga('send', 'event', 'outbound', 'click', 'Behance')">
 					Behance
 				</a>
-				<a data-type="github" title="Nothing of use here" class="🌎" target="_blank" href="https://github.com/walaura" onclick="ga('send', 'event', 'outbound', 'click', 'GitHub')">
+				<a data-type="github" title="Nothing of use here" class="🌎" target="_blank" href="https://github.com/walaura"
+				 onclick="ga('send', 'event', 'outbound', 'click', 'GitHub')">
 					GitHub
 				</a>
 				<a data-type="itch" title="No no no noo" class="🌎" target="_blank" href="https://walaura.itch.io" onclick="ga('send', 'event', 'outbound', 'click', 'Itch')">
@@ -37,7 +38,8 @@
 			</div>
 			<div class="🎒-👄">
 				Wanna get in touch? Hit me up at
-				<a class="🌎" data-type="linkedin" title="Look it's me looking serious" href="http://linkedin.com/in/walaura" onclick="ga('send', 'event', 'outbound', 'click', 'Linkedin')">
+				<a class="🌎" data-type="linkedin" title="Look it's me looking serious" href="http://linkedin.com/in/walaura"
+				 onclick="ga('send', 'event', 'outbound', 'click', 'Linkedin')">
 					LinkedIn </a> or send me an
 				<a class="🌎" data-type="mail" title="Party like it's 1990" target="_blank" class="mail" href="mailto:lawr@lauragonzalez.cc"
 				 onclick="ga('send', 'event', 'outbound', 'click', 'Email')">email</a>.
