--- a/src/index.html
+++ b/src/index.html
@@ -87,19 +87,25 @@
           <a target="_blank" href="mailto:lawr@lauragonzalez.cc">email</a> or
           add me on
           <a target="_blank" href="http://linkedin.com/in/walaura">LinkedIn</a>.
-          <small
-            >©<x-year></x-year> Me (<a
-              target="_blank"
-              href="https://creativecommons.org/licenses/by-nc-sa/3.0/"
-              >cc-by-sa</a
-            >) &middot;
-            <a
-              target="_blank"
-              href="https://github.com/walaura/watermelon-pizza"
-              >check out the source code</a
-            >
-            &middot; surprisingly not using any cookies</small
-          >
+          <footer>
+            <ul>
+              <li>
+                ©<x-year></x-year> Me (<a
+                  target="_blank"
+                  href="https://creativecommons.org/licenses/by-nc-sa/3.0/"
+                  >cc-by-sa</a
+                >)
+              </li>
+              <li>
+                <a
+                  target="_blank"
+                  href="https://github.com/walaura/watermelon-pizza"
+                  >check out the source code</a
+                >
+              </li>
+              <li>thanks for visiting!</li>
+            </ul>
+          </footer>
         </footer>
       </div>
     </x-fg>
