--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
           <footer>
             <ul>
               <li>
-                ©<x-year></x-year> Me (<a
+                ©<x-year></x-year> me lol (<a
                   target="_blank"
                   href="https://creativecommons.org/licenses/by-nc-sa/3.0/"
                   >cc-by-sa</a
