--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
                   >check out the source code</a
                 >
               </li>
-              <li>thanks for visiting!</li>
+              <li><a target="_blank" href="old/index.html">sssh</a></li>
             </ul>
           </footer>
         </footer>
