--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,9 @@
                   >check out the source code</a
                 >
               </li>
-              <li><a target="_blank" href="old/index.html">sssh</a></li>
+              <li>
+                <a href="https://www.lauragonzalez.cc/old/index.html">sssh</a>
+              </li>
             </ul>
           </footer>
         </footer>
