--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,10 @@
             </li>
 
             <li>
-              <a target="_blank" href="https://redbubble.com/evswhatsv">
+              <a
+                target="_blank"
+                href="https://www.redbubble.com/people/evswhatevs"
+              >
                 <span>Some of these stickers</span>
                 <strong>Redbubble</strong>
               </a>
