--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
               <li>
                 ©<x-year></x-year> me lol (<a
                   target="_blank"
-                  href="https://creativecommons.org/licenses/by-nc-sa/3.0/"
+                  href="https://creativecommons.org/licenses/by-sa/3.0/"
                   >cc-by-sa</a
                 >)
               </li>
