--- a/src/index.html
+++ b/src/index.html
@@ -85,8 +85,8 @@
           </ul>
         </nav>
         <footer>
-          <strong>Kthxbye!</strong> If you wanna get in touch with me you can
-          drop me a line via
+          <strong>Kthxbye!</strong> If you wanna get in touch with me,
+          you&nbsp;can drop me a line via
           <a target="_blank" href="mailto:lawr@lauragonzalez.cc">email</a> or
           add me on
           <a target="_blank" href="http://linkedin.com/in/walaura">LinkedIn</a>.
