--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="user-scalable=0, initial-scale=1.0" />
+    <meta
+      name="Description"
+      content="Hi! I'm Laura González – an artist, speaker,
+		developer, and overall disgrace."
+    />
 
     <title>Laura González</title>
     <link rel="shortcut icon" href="mushroom.png" />
@@ -33,34 +38,50 @@
         <nav class="links">
           <ul>
             <li>
-              <a target="_blank" href="https://twitter.com/freezydorito">
+              <a
+                rel="noopener"
+                target="_blank"
+                href="https://twitter.com/freezydorito"
+              >
                 <span>Comedy & tragedy</span>
                 <strong>Twitter</strong>
               </a>
             </li>
 
             <li>
-              <a target="_blank" href="https://github.com/walaura">
+              <a
+                rel="noopener"
+                target="_blank"
+                href="https://github.com/walaura"
+              >
                 <span>Code</span>
                 <strong>GitHub</strong>
               </a>
             </li>
 
             <li>
-              <a target="_blank" href="https://dev.to/walaura">
+              <a rel="noopener" target="_blank" href="https://dev.to/walaura">
                 <span>Writing</span>
                 <strong>Dev.to</strong>
               </a>
             </li>
             <li>
-              <a target="_blank" href="https://www.behance.net/walaura">
+              <a
+                rel="noopener"
+                target="_blank"
+                href="https://www.behance.net/walaura"
+              >
                 <span>Photos</span>
                 <strong>Behance</strong>
               </a>
             </li>
 
             <li>
-              <a target="_blank" href="https://flickr.com/lawwrr">
+              <a
+                rel="noopener"
+                target="_blank"
+                href="https://flickr.com/lawwrr"
+              >
                 <span>Photos too</span>
                 <strong>Flickr</strong>
               </a>
@@ -68,6 +89,7 @@
 
             <li>
               <a
+                rel="noopener"
                 target="_blank"
                 href="https://www.redbubble.com/people/evswhatevs"
               >
@@ -77,7 +99,7 @@
             </li>
 
             <li>
-              <a target="_blank" href="https://walaura.itch.io">
+              <a rel="noopener" target="_blank" href="https://walaura.itch.io">
                 <span>Games</span>
                 <strong>Itch.io</strong>
               </a>
@@ -87,13 +109,21 @@
         <footer>
           <strong>Kthxbye!</strong> If you wanna get in touch with me,
           you&nbsp;can drop me a line via
-          <a target="_blank" href="mailto:lawr@lauragonzalez.cc">email</a> or
-          add me on
-          <a target="_blank" href="http://linkedin.com/in/walaura">LinkedIn</a>.
+          <a rel="noopener" target="_blank" href="mailto:lawr@lauragonzalez.cc"
+            >email</a
+          >
+          or add me on
+          <a
+            rel="noopener"
+            target="_blank"
+            href="http://linkedin.com/in/walaura"
+            >LinkedIn</a
+          >.
           <footer>
             <ul>
               <li>
                 ©<x-year></x-year> me lol (<a
+                  rel="noopener"
                   target="_blank"
                   href="https://creativecommons.org/licenses/by-sa/3.0/"
                   >cc-by-sa</a
@@ -101,6 +131,7 @@
               </li>
               <li>
                 <a
+                  rel="noopener"
                   target="_blank"
                   href="https://github.com/walaura/watermelon-pizza"
                   >check out the source code</a
