--- a/src/index.html
+++ b/src/index.html
@@ -146,6 +146,6 @@
       </div>
     </x-fg>
     <x-stickers></x-stickers>
-    <script src="js/js.js"></script>
+    <script src="js/js.js" async defer></script>
   </body>
 </html>
