--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,8 @@
         </p>
         <div class="intro">
           <h1>
-            I'm <strong>Laura González</strong> – an&nbsp;artist, speaker,
-            developer, and overall disgrace.
+            I'm <strong title="thats two z's">Laura González</strong> –
+            an&nbsp;artist, speaker, developer, and overall disgrace.
           </h1>
           I'm helping make the web awesome at
           <s title="miss em everyday">TNW</s>
@@ -84,6 +84,17 @@
               >
                 <span>Photos too</span>
                 <strong>Flickr</strong>
+              </a>
+            </li>
+
+            <li>
+              <a
+                rel="noopener"
+                target="_blank"
+                href="https://glitch.com/@walaura"
+              >
+                <span>Code, but running</span>
+                <strong>Glitch</strong>
               </a>
             </li>
 
