--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
               <a
                 rel="noopener"
                 target="_blank"
-                href="https://www.redbubble.com/people/evswhatevs"
+                href="https://www.redbubble.com/people/evswhatevs/shop"
               >
                 <span>Some of these stickers</span>
                 <strong>Redbubble</strong>
