--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@
         <footer>
           <strong>Kthxbye!</strong> If you wanna get in touch with me,
           you&nbsp;can drop me a line via
-          <a rel="noopener" target="_blank" href="mailto:lawr@lauragonzalez.cc"
+          <a rel="noopener" target="_blank" href="mailto:hi@laura.monster"
             >email</a
           >
           or add me on
