--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,10 @@
             an&nbsp;artist, speaker, developer, and overall disgrace.
           </h1>
           I'm helping make the web awesome at
-          <s title="miss em everyday">TNW</s>
-          <s title="oh man this was an interesting one">The Guardian</s>
+          <s aria-hidden="true" title="miss em everyday">TNW</s>
+          <s aria-hidden="true" title="oh man this was an interesting one"
+            >The Guardian</s
+          >
           <em title="FACEBOOK the company not facebook the app">Facebook</em>,
           and&nbsp;in my free time I'm up to a lot:
         </div>
@@ -42,6 +44,7 @@
                 rel="noopener"
                 target="_blank"
                 href="https://twitter.com/freezydorito"
+                title="Opens in a new window"
               >
                 <span>Comedy & tragedy</span>
                 <strong>Twitter</strong>
@@ -53,6 +56,7 @@
                 rel="noopener"
                 target="_blank"
                 href="https://github.com/walaura"
+                title="Opens in a new window"
               >
                 <span>Code</span>
                 <strong>GitHub</strong>
@@ -60,7 +64,12 @@
             </li>
 
             <li>
-              <a rel="noopener" target="_blank" href="https://dev.to/walaura">
+              <a
+                rel="noopener"
+                target="_blank"
+                href="https://dev.to/walaura"
+                title="Opens in a new window"
+              >
                 <span>Writing</span>
                 <strong>Dev.to</strong>
               </a>
@@ -70,6 +79,7 @@
                 rel="noopener"
                 target="_blank"
                 href="https://www.behance.net/walaura"
+                title="Opens in a new window"
               >
                 <span>Photos</span>
                 <strong>Behance</strong>
@@ -81,6 +91,7 @@
                 rel="noopener"
                 target="_blank"
                 href="https://flickr.com/lawwrr"
+                title="Opens in a new window"
               >
                 <span>Photos too</span>
                 <strong>Flickr</strong>
@@ -92,6 +103,7 @@
                 rel="noopener"
                 target="_blank"
                 href="https://glitch.com/@walaura"
+                title="Opens in a new window"
               >
                 <span>Code, but running</span>
                 <strong>Glitch</strong>
@@ -103,6 +115,7 @@
                 rel="noopener"
                 target="_blank"
                 href="https://www.redbubble.com/people/evswhatevs/shop"
+                title="Opens in a new window"
               >
                 <span>Some of these stickers</span>
                 <strong>Redbubble</strong>
@@ -110,7 +123,12 @@
             </li>
 
             <li>
-              <a rel="noopener" target="_blank" href="https://walaura.itch.io">
+              <a
+                rel="noopener"
+                target="_blank"
+                href="https://walaura.itch.io"
+                title="Opens in a new window"
+              >
                 <span>Games</span>
                 <strong>Itch.io</strong>
               </a>
@@ -120,7 +138,11 @@
         <footer>
           <strong>Kthxbye!</strong> If you wanna get in touch with me,
           you&nbsp;can drop me a line via
-          <a rel="noopener" target="_blank" href="mailto:hi@laura.monster"
+          <a
+            rel="noopener"
+            target="_blank"
+            href="mailto:hi@laura.monster"
+            title="Opens in a new window"
             >email</a
           >
           or add me on
@@ -128,15 +150,17 @@
             rel="noopener"
             target="_blank"
             href="http://linkedin.com/in/walaura"
+            title="Opens in a new window"
             >LinkedIn</a
           >.
-          <footer>
+          <section>
             <ul>
               <li>
                 ©<x-year></x-year> me lol (<a
                   rel="noopener"
                   target="_blank"
                   href="https://creativecommons.org/licenses/by-sa/3.0/"
+                  title="Opens in a new window"
                   >cc-by-sa</a
                 >)
               </li>
@@ -145,14 +169,19 @@
                   rel="noopener"
                   target="_blank"
                   href="https://github.com/walaura/watermelon-pizza"
+                  title="Opens in a new window"
                   >check out the source code</a
                 >
               </li>
               <li>
-                <a href="https://www.lauragonzalez.cc/old/index.html">sssh</a>
+                <a
+                  href="https://www.lauragonzalez.cc/old/index.html"
+                  title="Older versions of this website"
+                  >sssh</a
+                >
               </li>
             </ul>
-          </footer>
+          </section>
         </footer>
       </div>
     </x-fg>
