--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,11 @@
   </head>
 
   <body>
-    <x-glitch></x-glitch>
-    <x-bg></x-bg>
-    <x-underbg></x-underbg>
-
+    <x-tomfoolery>
+      <x-glitch></x-glitch>
+      <x-bg></x-bg>
+      <x-underbg></x-underbg>
+    </x-tomfoolery>
     <x-fg>
       <div class="wrapper">
         <p class="chip">
