--- a/src/index.html
+++ b/src/index.html
@@ -187,6 +187,6 @@
       </div>
     </x-fg>
     <x-stickers></x-stickers>
-    <script src="js/js.js" async defer></script>
+    <script type="module" src="js/js.js" async defer></script>
   </body>
 </html>
