--- a/src/index.html
+++ b/src/index.html
@@ -22,21 +22,21 @@
     </x-tomfoolery>
     <x-fg>
       <div class="wrapper">
-        <p class="chip">
-          Hey, hi!
-        </p>
         <div class="intro">
+          Hey, hi! 👋
           <h1>
-            I'm <strong title="thats two z's">Laura González</strong> –
-            an&nbsp;artist, speaker, developer, and overall disgrace.
+            This is <strong title="thats two z's">Laura González</strong> – I'm
+            great at building products and you are great at locating this
+            website! My cat, Salsa is great at everything. Not relevant, just
+            wanna mention her.
           </h1>
-          I'm helping make the web awesome at
+          I've been around at
           <s aria-hidden="true" title="miss em everyday">TNW</s>
           <s aria-hidden="true" title="oh man this was an interesting one"
             >The Guardian</s
           >
-          <em title="FACEBOOK the company not facebook the app">Facebook</em>,
-          and&nbsp;in my free time I'm up to a lot:
+          <s title="ITS NOT A PHASE MOM">Facebook</s> and now
+          <em title="Nonspecific design systems stuff">Meta</em>,
         </div>
         <nav class="links">
           <ul>
@@ -137,46 +137,40 @@
           </ul>
         </nav>
         <footer>
-          <strong>Kthxbye!</strong> If you wanna get in touch with me,
-          you&nbsp;can drop me a line via
-          <a
-            rel="noopener"
-            target="_blank"
-            href="mailto:hi@laura.monster"
-            title="Opens in a new window"
-            >email</a
-          >
-          or add me on
-          <a
-            rel="noopener"
-            target="_blank"
-            href="http://linkedin.com/in/walaura"
-            title="Opens in a new window"
-            >LinkedIn</a
-          >.
+          <span>
+            Here on business? If you wanna get in touch with me, you&nbsp;can
+            drop me a line via
+            <a
+              rel="noopener"
+              target="_blank"
+              href="mailto:hi@laura.monster"
+              title="Opens in a new window"
+              >email</a
+            >
+            or add me on
+            <a
+              rel="noopener"
+              target="_blank"
+              href="http://linkedin.com/in/walaura"
+              title="Opens in a new window"
+              >LinkedIn</a
+            >.
+          </span>
           <section>
             <ul>
-              <li>
-                ©<x-year></x-year> me lol (<a
-                  rel="noopener"
-                  target="_blank"
-                  href="https://creativecommons.org/licenses/by-sa/3.0/"
-                  title="Opens in a new window"
-                  >cc-by-sa</a
-                >)
-              </li>
+              <li>©<x-year></x-year> me</li>
               <li>
                 <a
                   rel="noopener"
                   target="_blank"
                   href="https://github.com/walaura/watermelon-pizza"
                   title="Opens in a new window"
-                  >check out the source code</a
+                  >source code</a
                 >
               </li>
               <li>
                 <a
-                  href="https://www.lauragonzalez.cc/old/index.html"
+                  href="https://laura.monster/old/index.html"
                   title="Older versions of this website"
                   >sssh</a
                 >
