--- a/src/index.html
+++ b/src/index.html
@@ -18,25 +18,28 @@
     <x-tomfoolery>
       <x-glitch></x-glitch>
       <x-bg></x-bg>
-      <x-underbg></x-underbg>
     </x-tomfoolery>
     <x-fg>
       <div class="wrapper">
         <div class="intro">
-          Hey, hi! 👋
-          <h1>
-            This is <strong title="thats two z's">Laura González</strong> – I'm
-            great at building products and you are great at locating this
-            website! My cat, Salsa is great at everything. Not relevant, just
-            wanna mention her.
-          </h1>
-          I've been around at
-          <s aria-hidden="true" title="miss em everyday">TNW</s>
-          <s aria-hidden="true" title="oh man this was an interesting one"
-            >The Guardian</s
-          >
-          <s title="ITS NOT A PHASE MOM">Facebook</s> and now
-          <em title="Nonspecific design systems stuff">Meta</em>,
+          <div class="intro-para">
+            Hey, hi! <img src="css/wave.svg" alt="Wave sign" />
+            <h1>
+              This is <strong title="thats two z's">Laura González</strong> –
+              I'm great at building products and you are great at locating this
+              website! My cat, Salsa is great at everything. Not relevant, just
+              wanna mention her!
+            </h1>
+          </div>
+          <div class="intro-para">
+            I've been around at
+            <s aria-hidden="true" title="miss em everyday">TNW</s>
+            <s aria-hidden="true" title="oh man this was an interesting one"
+              >The Guardian</s
+            >
+            <s title="ITS NOT A PHASE MOM">Facebook</s> and as of lately,
+            <em title="Nonspecific design systems stuff">Meta</em>.
+          </div>
         </div>
         <nav class="links">
           <ul>
@@ -44,11 +47,11 @@
               <a
                 rel="noopener"
                 target="_blank"
-                href="https://twitter.com/freezydorito"
+                href="https://bsky.app/profile/freezydorito.lol"
                 title="Opens in a new window"
               >
                 <span>Comedy & tragedy</span>
-                <strong>Twitter</strong>
+                <strong>Bluesky</strong>
               </a>
             </li>
 
@@ -68,22 +71,23 @@
               <a
                 rel="noopener"
                 target="_blank"
-                href="https://dev.to/walaura"
-                title="Opens in a new window"
-              >
-                <span>Writing</span>
-                <strong>Dev.to</strong>
-              </a>
-            </li>
-            <li>
-              <a
-                rel="noopener"
-                target="_blank"
                 href="https://www.behance.net/walaura"
                 title="Opens in a new window"
               >
                 <span>Photos</span>
                 <strong>Behance</strong>
+              </a>
+            </li>
+
+            <li>
+              <a
+                rel="noopener"
+                target="_blank"
+                href="https://www.redbubble.com/people/evswhatevs/shop"
+                title="Opens in a new window"
+              >
+                <span>Sticker shop</span>
+                <strong>Redbubble</strong>
               </a>
             </li>
 
@@ -103,11 +107,11 @@
               <a
                 rel="noopener"
                 target="_blank"
-                href="https://glitch.com/@walaura"
+                href="https://dev.to/walaura"
                 title="Opens in a new window"
               >
-                <span>Code, but running</span>
-                <strong>Glitch</strong>
+                <span>Writing</span>
+                <strong>Dev.to</strong>
               </a>
             </li>
 
@@ -115,11 +119,11 @@
               <a
                 rel="noopener"
                 target="_blank"
-                href="https://www.redbubble.com/people/evswhatevs/shop"
+                href="https://glitch.com/@walaura"
                 title="Opens in a new window"
               >
-                <span>Some of these stickers</span>
-                <strong>Redbubble</strong>
+                <span>Code, but running</span>
+                <strong>Glitch</strong>
               </a>
             </li>
 
