--- a/src/index.html
+++ b/src/index.html
@@ -26,20 +26,12 @@
             Hey, hi! <img src="css/wave.svg" alt="Wave sign" />
             <h1>
               This is <strong title="thats two z's">Laura González</strong> –
-              I'm great at building products and you are great at locating this
-              website! My cat, Salsa is great at everything. Not relevant, just
-              wanna mention her!
+              I'm great at building <s aria-hidden="true" title="miss em everyday">products</s> teams that then build great products, and you are great at finding this
+              website!
             </h1>
           </div>
           <div class="intro-para">
-            I've been around at
-            <s aria-hidden="true" title="miss em everyday">TNW</s>
-            <s aria-hidden="true" title="oh man this was an interesting one"
-              >The Guardian</s
-            >
-            <s title="ITS NOT A PHASE MOM">Facebook</s> and as of lately,
-            <em title="Nonspecific design systems stuff">Meta</em>.
-          </div>
+            My cat, Salsa is great at everything. Not relevant, just wanna mention her. Pics on bluesky.
         </div>
         <nav class="links">
           <ul>
@@ -112,18 +104,6 @@
               >
                 <span>Writing</span>
                 <strong>Dev.to</strong>
-              </a>
-            </li>
-
-            <li>
-              <a
-                rel="noopener"
-                target="_blank"
-                href="https://glitch.com/@walaura"
-                title="Opens in a new window"
-              >
-                <span>Code, but running</span>
-                <strong>Glitch</strong>
               </a>
             </li>
 
