--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             Hey, hi! <img src="css/wave.svg" alt="Wave sign" />
             <h1>
               This is <strong title="thats two z's">Laura González</strong> –
-              I'm great at building <s aria-hidden="true" title="miss em everyday">products</s> teams that then build great products, and you are great at finding this
+              I'm great at building <s aria-hidden="true" title="this was so much easier than the teams lol!">products</s> teams that then build great products, and you are great at finding this
               website!
             </h1>
           </div>
