--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
           </div>
           <div class="intro-para">
             My cat, Salsa is great at everything. Not relevant, just wanna mention her. Pics on bluesky.
+	  </div>
         </div>
         <nav class="links">
           <ul>
