vaguely depression-coding

--- a/src/index.html
+++ b/src/index.html
@@ -25,14 +25,9 @@
           <div class="intro-para">
             Hey, hi! <img src="css/wave.svg" alt="Wave sign" />
             <h1>
-              This is <strong title="thats two z's">Laura González</strong> –
-              I'm great at building <s aria-hidden="true" title="this was so much easier than the teams lol!">products</s> teams that then build great products, and you are great at finding this
-              website!
+              This is <strong title="thats two z's">Laura González</strong> – I build stuff on the web and out of the web and sometimes try to help others do the same.
             </h1>
           </div>
-          <div class="intro-para">
-            My cat, Salsa is great at everything. Not relevant, just wanna mention her. Pics on bluesky.
-	  </div>
         </div>
         <nav class="links">
           <ul>
@@ -43,7 +38,7 @@
                 href="https://bsky.app/profile/freezydorito.lol"
                 title="Opens in a new window"
               >
-                <span>Comedy & tragedy</span>
+                <span>Pics of my cat</span>
                 <strong>Bluesky</strong>
               </a>
             </li>
