--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
           <div class="intro-para">
             Hey, hi! <img src="css/wave.svg" alt="Wave sign" />
             <h1>
-              This is <strong title="thats two z's">Laura González</strong> – I build stuff on the web and out of the web and sometimes try to help others do the same.
+              This is <strong title="thats two z's">Laura González</strong> – I build stuff on the web and out of the web. Sometimes I even help others do the same thing! I'm mostly active on bsky rn but there's cool stuff behind all these links.
             </h1>
           </div>
         </div>
