--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
       <div class="wrapper">
         <div class="intro">
           <div class="intro-para">
-            Hey, hi! <img src="css/wave.svg" alt="Wave sign" />
+            Hi! <img src="css/wave.svg" alt="Wave sign" />
             <h1>
-              This is <strong title="thats two z's">Laura González</strong> – I build stuff on the web and out of the web. Sometimes I even help others do the same thing! I'm mostly active on bsky rn but there's cool stuff behind all these links.
+              This is <strong title="thats two z's">Laura González</strong> – Philantropist. Computer user. Costco member. Mother to a cat who has no idea thats going on. Not super into caramelized onions. Quotetweeted once by the NYT. 
             </h1>
           </div>
         </div>
@@ -38,7 +38,7 @@
                 href="https://bsky.app/profile/freezydorito.lol"
                 title="Opens in a new window"
               >
-                <span>Pics of my cat</span>
+                <span>Pics of salsa (cat)</span>
                 <strong>Bluesky</strong>
               </a>
             </li>
