--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
           <div class="intro-para">
             Hi! <img src="css/wave.svg" alt="Wave sign" />
             <h1>
-              This is <strong title="thats two z's">Laura González</strong> – Philantropist. Computer disliker Costco member. Mother to a cat who has no idea thats going on. Not super into caramelized onions. Owns a powerwasher. Quotetweeted once by the NYT. Active in at least 2 of these other websites:
+              This is <strong title="thats two z's">Laura González</strong> – Philantropist. Computer mistruster. Costco member. Mother to a cat who has no idea thats going on. Owns a power washer. Not super into caramelized onions. Quotetweeted once by the NYT. Active in, like, at least 2 of these other websites:
             </h1>
           </div>
         </div>
