Remove description meta tag and update intro text
Removed the meta description tag and updated the intro text.

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="user-scalable=0, initial-scale=1.0" />
-    <meta
-      name="Description"
-      content="Hi! I'm Laura González – an artist, speaker,
-		developer, and overall disgrace."
-    />
-
     <title>Laura González</title>
     <link rel="shortcut icon" href="mushroom.png" />
     <link rel="stylesheet" href="css/css.css" />
@@ -25,7 +19,7 @@
           <div class="intro-para">
             Hi! <img src="css/wave.svg" alt="Wave sign" />
             <h1>
-              This is <strong title="thats two z's">Laura González</strong> – Philantropist. Developed a game once. Costco member. Mother to a cat who has no idea thats whats going on. Owns a power washer. Has tried at least 10 flavors of Monster energy. Got quotetweeted once by the NYT. Active in, like, at least 2 of these other websites:
+              This is <strong title="thats two z's">Laura González</strong> – Philantropist. Developed a game once. Costco member. Mother to a cat who has no idea thats whats going on. Owns a power washer. Prefers Pepsi. Got quotetweeted once by the NYT. Active in, like, at least 2 of these other websites:
             </h1>
           </div>
         </div>
