Revise introduction text for Laura González

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
           <div class="intro-para">
             Hi! <img src="css/wave.svg" alt="Wave sign" />
             <h1>
-              This is <strong title="thats two z's">Laura González</strong> – Philantropist. Developed a game once. Costco member. Mother to a cat who has no idea thats whats going on. Owns a power washer. Prefers Pepsi. Got quotetweeted once by the NYT. Active in, like, at least 2 of these other websites:
+              This is <strong title="thats two z's">Laura González</strong> – Developed a game once. Has a motorcycle licence due to an administrative oversight. Costco member. Mother to a cat who has no idea thats whats going on. Owns a power washer. Prefers Pepsi. Got quotetweeted once by the NYT. Active in, like, at least 2 of these other websites:
             </h1>
           </div>
         </div>
